--- a/index.html
+++ b/index.html
@@ -183,10 +183,11 @@
       <h3 class="page-title white-text teal">About</h3>
       <div class="container flow-text">
         <h2>정말 아는 만큼만 보인다</h2>
-        2015년 프리랜서 JAVA 개발자로 시작하였고 다양한 환경에서 적응하고 커뮤니케이션하며 문제해결을 하며 프로젝트들을 끝내왔습니다.<br/>
-        짧게나마 경력이 쌓이고 나니 <i>아는 만큼 보인다</i>는 말이 너무나 공감되었습니다.<br/>
-        IT용어뿐만 아니라 코드의 이해, 프로젝트 파악, 문제 발생시 원인 분석 및 처리 등 모두 포괄되어있었습니다.
-        지금도 꾸준히 지식과 경험을 쌓아 발전하여 더 나아가는 개발자가 되고자 합니다.
+        2015년 JAVA 개발자로 시작하였고 다양한 환경에 적응하고 커뮤니케이션하며 문제해결을 하며 프로젝트들을 끝내왔습니다.<br/>
+        짧게나마 경력이 쌓이고 나니 그제서야 <i style="text-decoration: underline;">아는 만큼 보인다</i>는 말이 너무나 와 닿았습니다.<br/>
+        생각해보면 정말로 딱 제가 아는 만큼의 최선을 다 했었습니다.<br/>
+        알고있다라는건 IT용어뿐만 아니라 코드의 이해, 프로젝트 파악, 문제 발생시 원인 분석 및 처리 등 모두 포괄되어있었습니다.
+        끊임없이 새로운것을 탐구하고 경험을 쌓아 발전해 나아가는 개발자가 되고자 합니다.
       </div>
     </section>
 
@@ -233,7 +234,7 @@
               <li>각 설비들의 실시간 시계열데이터는 MongoDB로 적재</li>
               <li>기존에 개발된 Ui, 프로시저, 리포트, batch 등 유지보수 관리</li>
               <p class="item-caption">
-                  **기술 스택: js, JAVA, spring, mybatis, postgreSql, mongoDB, Git, OZ report
+                  **기술 스택: js, JAVA, spring, mybatis, postgreSql, mongoDB, Git, OZreport
               </p>
           </ul>
         </div>
@@ -324,10 +325,10 @@
       <h3 class="page-title white-text teal">Skills</h3>
       <div class="container">
         <ul class="item-details">
-          <li>Languages: Java, JavaScript, JQuery, HTML/CSS, Python, C</li>
-          <li>Databases: Oracle, PostgreSQL, MongoDB, Pro-C</li>
-          <li>Libraries: JQuery, BootStrap, NumPy</li>
-          <li>Frameworks: Spring, Node.js</li>
+          <li>Language   : Java, JavaScript, HTML/CSS, Python, C</li>
+          <li>Databases  : Oracle, PostgreSQL, MongoDB, Pro-C</li>
+          <li>Libraries  : JQuery, BootStrap, NumPy</li>
+          <li>Frameworks : Spring/Springboot, Node.js</li>
         </ul>
       </div>
     </section>
@@ -343,9 +344,9 @@
               <span class="period">2022.08~ 재학중</span>
           </div>
           <ul class="item-details">
-              <li>Python, C</li>
+              <li>Python, C, JAVA, javascript, Node, css</li>
+              <li>SQLD</li>
               <li>머신러닝</li>
-              <li>빅데이터분석관련</li>
           </ul>
         </div>
         <div class="row">
@@ -381,6 +382,7 @@
         </p>
       </div>
     </section>
+  </main>
 
   <!-- typed.js -->
   <script src="./assets/vendor/typed.js/typed.min.js"></script>
