--- a/index.html
+++ b/index.html
@@ -353,6 +353,9 @@
                 <img alt="" src="./assets/img/spring_boot.png" class="responsive-img"/>Springboot
               </div>              
               <div class="col s4 m2">
+                <img alt="" src="./assets/img/oracle.png" class="responsive-img" />Oracle
+              </div>
+              <div class="col s4 m2">
                 <img alt="" src="./assets/img/postgresql-logo.png" class="responsive-img" />PostgreSQL
               </div>
               <div class="col s4 m2">
