--- a/index.html
+++ b/index.html
@@ -394,6 +394,9 @@
                 <img alt="" src="./assets/img/mongodb.png" class="responsive-img" />MongoDB
               </div>
               <div class="col s4 m2">
+                <img alt="" src="./assets/img/kafka.png" class="responsive-img" />Kafka
+              </div>
+              <div class="col s4 m2">
                 <img alt="" src="./assets/img/oz.png" class="responsive-img" />OZReport
               </div>
             </div>
